live-server for another html file

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1 id="heading">Codewar challenges</h1>
-        <p id="myP">empty paragraph</span>.</p>
+        <p id="myP">kyu4</span>.</p>
 
     </main>
     <script rel="text/javascript" src="app2.js"></script>
