--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1 id="heading">Codewar challenges</h1>
-        <p id="myP">empty paragraph</span>.</p>
+        <p id="myP">kyu 8, 7, 6, 5</span>.</p>
 
     </main>
     <script rel="text/javascript" src="app.js"></script>
