adding solution to 4x4 sudoku

--- a/index5 kyu3 #1v2.html
+++ b/index5 kyu3 #1v2.html
@@ -13,7 +13,7 @@
         <p id="myP">kyu3 num = 1</span>.</p>
 
     </main>
-    <script rel="text/javascript" src="app5.js"></script>
+    <script rel="text/javascript" src="app5v2.js"></script>
 </body>
 
 </html>
