--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <td>How Many Numbers? III</td>
             <td>kyu4.js</td>
             <td>solved</td>
-            <td>-</td>
+            <td>Recursion, optimization</td>
           </tr>
           <tr>
             <th>7</th>
@@ -92,7 +92,7 @@
             <td>Next smaller number with the same digits</td>
             <td>kyu4_3.js</td>
             <td>solved</td>
-            <td>-</td>
+            <td>Break/continue inside the loop</td>
           </tr>
           <tr>
             <th>9</th>
@@ -116,7 +116,7 @@
             <td>Battleship field validator</td>
             <td>kyu3_3.js</td>
             <td>solved</td>
-            <td></td>
+            <td>Logical algorithm</td>
           </tr>
           <tr>
             <th>11</th>
@@ -124,7 +124,7 @@
             <td>Make a spiral</td>
             <td>kyu3_4.js</td>
             <td>solved</td>
-            <td></td>
+            <td>Logical algorithm</td>
           </tr>
           <tr>
             <th>12</th>
@@ -132,23 +132,23 @@
             <td>N-Parasitic Numbers Ending in N</td>
             <td>kyu3_5.js</td>
             <td>solved</td>
-            <td></td>
+            <td>Logical algorithm for optimization - multiplying large numbers (> MAX_SAFE_INTEGER) via strings (char by char) as BigInt() is not allowed by terms of the challenge</td>
+          </tr>
+          <tr>
+            <th></th>
+            <td>3</td>
+            <td>N-Parasitic Numbers Ending in N - simplification using BigInt()</td>
+            <td>kyu3_6.js</td>
+            <td>solved</td>
+            <td>Logical algorithm for optimization - applying BigInt()</td>
           </tr>
           <tr>
             <th>13</th>
-            <td>3</td>
-            <td>N-Parasitic Numbers Ending in N</td>
-            <td>kyu3_6.js</td>
-            <td>solved</td>
-            <td>solution using BigInt()</td>
-          </tr>
-          <tr>
-            <th>14</th>
             <td>2</td>
             <td>6 By 6 Skyscrapers</td>
             <td>kyu2.js</td>
             <td>solved</td>
-            <td>brute-force + logical algorithm</td>
+            <td>logical algorithm (to optimize brute-force), brute-force</td>
           </tr>
         </tbody>
       </table>
