adding new kyu challenge to the list

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
             <td>solved</td>
             <td>logical algorithm (to optimize brute-force), brute-force</td>
           </tr>
+          <tr>
+            <th>14</th>
+            <td>4</td>
+            <td>Connect Four</td>
+            <td>kyu4_4.js</td>
+            <td>solved</td>
+            <td>logical algorithm</td>
+          </tr>
         </tbody>
       </table>
     </main>
