kyu4_4 - forming final board based on the movelist

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </tbody>
       </table>
     </main>
-    <script rel="text/javascript" src="kyu7.js"></script>
+    <!-- <script rel="text/javascript" src="kyu7.js"></script>
     <script rel="text/javascript" src="kyu7_2.js"></script>
     <script rel="text/javascript" src="kyu6.js"></script>
     <script rel="text/javascript" src="kyu6_2.js"></script>
@@ -175,6 +175,7 @@
     <script rel="text/javascript" src="kyu3_4.js"></script>
     <script rel="text/javascript" src="kyu3_5.js"></script>
     <script rel="text/javascript" src="kyu3_6.js"></script>
-    <script rel="text/javascript" src="kyu2.js"></script>
+    <script rel="text/javascript" src="kyu2.js"></script> -->
+    <script rel="text/javascript" src="kyu4_4.js"></script>
   </body>
 </html>
